# nomad-ai-challenge-assignment

./: assignment3.ipynb  assignment5.ipynb  main.ipynb  main.py  pyproject.toml
